--- a/app/views/users/friends.haml
+++ b/app/views/users/friends.haml
@@ -1,7 +1,7 @@
 .subtitle
   My Friends Who Are With Her
 .center.share-btn
-  = link_to "Recruit Your Friends", "javascript: void(0);", class: "btn btn-primary share-btn btn-bold", id: "facebook-share-link", "data-url" => 'https://developers.facebook.com/docs/'
+  = link_to "Recruit Your Friends", "javascript: void(0);", class: "btn btn-primary share-btn btn-bold", id: "facebook-share-link", "data-url" => 'https://areyouwithher.herokuapp.com'
 - if @friends.any?
   %table.table.table-hover
     %thead
