adjust footer and precompile assets

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,4 +1,5 @@
-%footer.footer
-  .container.center
-    %p
-      == This site was built by volunteers and is not affiliated with #{link_to "Hillary for America", "https://www.hillaryclinton.com/"}
+.navbar.navbar-default.navbar-fixed-bottom
+  .container
+    .navbar-text.footer.center
+      == This site was built by volunteers and is not affiliated with #{link_to "Hillary for America", "https://www.hillaryclinton.com/", target: "_blank"}
+      
