redirect to edit account if new account

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,3 +10,9 @@
 .popup-text{
   color: #fff;
 }
+.header{
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 30px; 
+  color: white;
+  text-align: center;
+}
