--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -17,6 +17,8 @@
                   = link_to "My Friends", user_root_path
                 %li
                   = link_to "My Info", account_path
+                %li
+                  = link_to "Find Friends by State", states_path
                 %li.divider{:role => "separator"}
                 %li
                   = link_to "Sign Out", destroy_user_session_path, method: :delete
