--- a/app/views/pages/yes.haml
+++ b/app/views/pages/yes.haml
@@ -3,7 +3,7 @@
 .subtitle
   Sign up for an account and we'll remind you to vote on election day. 
   %br
-    It's also an easy way to find all of your friends in swing states, so that we can remind them too!
+    It's also an easy way to find all of your friends in swing states, so that we can remind them too! On election day, you can keep each other updated on who has and hasn't voted.
 .col-xs-12.facebook-btn
   .col-xs-4
   .col-xs-4
