add button to Hillary FB likers

--- a/app/views/users/friends.haml
+++ b/app/views/users/friends.haml
@@ -3,6 +3,7 @@
 .center.share-btn
   = link_to "Recruit Your Friends", "javascript: void(0);", class: "btn btn-primary share-btn btn-bold", id: "facebook-share-link", "data-url" => 'https://areyouwithher.herokuapp.com'
   = link_to "Find Friends in Swing States", states_path, class: "btn btn-primary share-btn btn-bold"
+  = link_to "Find Friends Who Like Hillary", "https://www.facebook.com/search/889307941125736/likers/me/friends/intersect", class: "btn btn-primary share-btn btn-bold", target: "_blank"
 %table.table.table-hover
   %thead
     %th
