bug on friends page

--- a/app/views/users/friends.haml
+++ b/app/views/users/friends.haml
@@ -23,7 +23,7 @@
       - @friends.each do |friend|
         %tr
           %td
-            = friend.friend_name
+            = friend.name
           %td
             = friend.city
           %td
