--- a/app/views/pages/no.haml
+++ b/app/views/pages/no.haml
@@ -1,6 +1,14 @@
-%section
-  .textContainer.center
-    .title
-      LAME
-    .subtitle
-      To do: Add content on this page
+.subtitle
+  I'm not with her because...
+
+%div{class: "buttons"}
+  .col-xs-12.col-sm-6.center
+    = link_to "I'm Sad Bernie Lost", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
+  .col-xs-12.col-sm-6.center
+    = link_to "Another Link", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
+  .col-xs-12.col-sm-6.center
+    = link_to "Another Link", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
+  .col-xs-12.col-sm-6.center
+    = link_to "Another Link", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
+  .col-xs-12.center
+    = link_to "I changed my mind, I'm with her now!", yes_path, class: "btn btn-success"
