--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -47,3 +47,18 @@ body{
     width: 100%;
 
 }
+
+.buttons{
+  padding-top: 20px;
+  min-height: 100%;
+  height: 100%;
+  .col-sm-6{
+    min-height: 150px
+  }
+  .btn{
+    font-size: 40px;
+    padding: 20px;
+  }
+}
+
+
