add friends count, change no content

--- a/app/views/users/friends.haml
+++ b/app/views/users/friends.haml
@@ -1,5 +1,8 @@
 .subtitle
-  My Friends Who Are With Her
+  You Have 
+  .big
+    #{current_user.friends_count}
+  Friends Who Are With Her
 .center.share-btn
   = link_to "Recruit Your Friends", "javascript: void(0);", class: "btn btn-primary share-btn btn-bold", id: "facebook-share-link", "data-url" => 'https://areyouwithher.herokuapp.com'
   = link_to "Find Friends in Swing States", states_path, class: "btn btn-primary share-btn btn-bold"
