--- a/app/views/pages/no.haml
+++ b/app/views/pages/no.haml
@@ -5,10 +5,6 @@
   .col-xs-12.col-sm-6.center
     = link_to "I'm Sad Bernie Lost", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
   .col-xs-12.col-sm-6.center
-    = link_to "Another Link", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
-  .col-xs-12.col-sm-6.center
-    = link_to "Another Link", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
-  .col-xs-12.col-sm-6.center
-    = link_to "Another Link", "http://abebbb.tumblr.com/post/148091588042/seven-reasons-why-i-will-vote-for-hillary-clinton", target: "_blank", class: "btn btn-primary btn-lg"
+    = link_to "I'm a Republican", "https://www.washingtonpost.com/opinions/donald-trump-is-a-unique-threat-to-american-democracy/2016/07/22/a6d823cc-4f4f-11e6-aa14-e0c1087f7583_story.html?tid=a_inl", target: "_blank", class: "btn btn-primary btn-lg"
   .col-xs-12.center
     = link_to "I changed my mind, I'm with her now!", yes_path, class: "btn btn-success"
