add events and recompile assets

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -57,3 +57,12 @@
 .table-hover{
   margin-bottom: 70px;
 }
+
+.paginate{
+  color: white;
+  text-align: center;
+  padding-bottom: 50px;
+  a{
+    color: white;
+  }
+}
