--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -19,6 +19,8 @@
                   = link_to "My Info", account_path
                 %li
                   = link_to "Find Friends by State", states_path
+                %li
+                  = link_to "Events", events_path
                 %li.divider{:role => "separator"}
                 %li
                   = link_to "Sign Out", destroy_user_session_path, method: :delete
