add cars and passengers

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,12 @@
 .table-hover{
   margin-bottom: 0px !important;
 }
+.text{
+  padding-bottom: 20px;
+}
+h3{
+  color: white;
+}
+.btn-request{
+  margin-bottom: 20px;
+}
