--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -26,7 +26,7 @@
                   = link_to "Sign Out", destroy_user_session_path, method: :delete
           - else
             %li
-              %a{class: "btn btn-block btn-social btn-facebook btn-login", :href => "auth/facebook"}
+              %a{class: "btn btn-block btn-social btn-facebook btn-login", :href => "/auth/facebook"}
                 %i.fa.fa-facebook
                 .sign-in
                   Log in with Facebook
