--- a/app/views/pages/yes.haml
+++ b/app/views/pages/yes.haml
@@ -7,7 +7,7 @@
 .col-xs-12.facebook-btn
   .col-xs-4
   .col-xs-4
-    %a{class: "btn btn-block btn-social btn-lg btn-facebook btn-home", :href => "auth/facebook"}
+    %a{class: "btn btn-block btn-social btn-lg btn-facebook btn-home", :href => "/auth/facebook"}
       %i.fa.fa-facebook
       .sign-in
         == Sign Up With Facebook
