--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -21,6 +21,8 @@
                   = link_to "Find Friends by State", states_path
                 %li
                   = link_to "Events", events_path
+                %li
+                  = link_to "My Rides", rides_path
                 %li.divider{:role => "separator"}
                 %li
                   = link_to "Sign Out", destroy_user_session_path, method: :delete
