add filter events by type

--- a/app/views/events/index.haml
+++ b/app/views/events/index.haml
@@ -3,14 +3,24 @@
     Hillary Events
 
 .text
-  Filter by state:
-  .btn-group
-    %button.btn.dropdown-toggle{type: "button", class: "btn btn-grey", "data-toggle" => "dropdown", "aria-expanded" => false}
-      Select state:
-      %span.caret
-    %ul.dropdown-menu{role: "menu"}
-      - for state in @states
-        %li{class: ('state' if params[:filter_by] == state.abbreviation)}= link_to state.name.titleize, events_path(filter_parameters(filter_by: state.abbreviation))
+  .col-xs-12.col-sm-6.center.filter
+    Filter by state:
+    .btn-group
+      %button.btn.dropdown-toggle{type: "button", class: "btn btn-grey", "data-toggle" => "dropdown", "aria-expanded" => false}
+        Select state:
+        %span.caret
+      %ul.dropdown-menu{role: "menu"}
+        - for state in @states
+          %li{class: ('active' if params[:state] == state.abbreviation)}= link_to state.name.titleize, events_path(filter_parameters(state: state.abbreviation, event_type: params[:event_type]))
+  .col-xs-12.col-sm-6.center.filter
+    Filter by Event Type:
+    .btn-group
+      %button.btn.dropdown-toggle{type: "button", class: "btn btn-grey", "data-toggle" => "dropdown", "aria-expanded" => false}
+        Select Event Type:
+        %span.caret
+      %ul.dropdown-menu{role: "menu"}
+        - for event_type in @event_types
+          %li{class: ('active' if params[:event_type] == event_type.id)}= link_to event_type.name.titleize, events_path(filter_parameters(state: params[:state], event_type: event_type.id))
 
 %table.table.table-hover
   %thead
