--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -89,3 +89,11 @@ table{
 .list-group-item{
   color: black !important;
 }
+
+li.active a {
+    background-color: #e1e1e1 !important;
+    color: #006ed4;
+    &:hover {
+      color: #006ed4;
+    }
+}
