--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-social";
+@import 'bootstrap-datetimepicker';
 @import "*";
