change home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,5 @@
 @import "bootstrap";
 @import "bootstrap-social";
 @import 'bootstrap-datetimepicker';
+@import "bootstrap-datepicker";
 @import "*";
