--- a/app/views/pages/home.haml
+++ b/app/views/pages/home.haml
@@ -2,7 +2,9 @@
   .textContainer.center
     .title.main-question
       Are you with her?
-    .col-xs-6.right 
-      = link_to "Yes", yes_path, class: "btn btn-lg btn-success btn-yn"
-    .col-xs-6.left
-      = link_to "No", no_path, class: "btn btn-lg btn-danger btn-yn"
+    .col-xs-4.center
+      = link_to "Find Events", events_path, class: "btn btn-lg btn-success btn-home"
+    .col-xs-4.center
+      = link_to "Find/Offer a Ride", cars_path, class: "btn btn-lg btn-success btn-home"
+    .col-xs-4.center
+      = link_to "Are you with her?", aywh_path, class: "btn btn-lg btn-success btn-home"
