--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -30,6 +30,12 @@ body{
   padding-top: 16px;
 }
 
+.btn-home{
+  width: 200px;
+  font-size: 20px;
+  padding-top: 16px;
+}
+
 .facebook-btn{
   margin-top: 20px;
   margin-bottom: 20px;
