switch to bootstrap form helper

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-social";
-@import 'bootstrap-datetimepicker';
-@import "bootstrap-datepicker";
+@import "rails_bootstrap_forms";
 @import "*";
