--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -14,7 +14,7 @@
                 %span.caret
               %ul.dropdown-menu
                 %li
-                  = link_to "My Friends", user_root_path
+                  = link_to "My Friends", friends_path
                 %li
                   = link_to "My Info", account_path
                 %li
